--- a/css/1024.scss
+++ b/css/1024.scss
@@ -102,21 +102,40 @@
     }
     .main__container {
       height: 100%;
+      .main-inbox {
+        bottom: 26.074vw;
+        top: auto;
+        width: 39.258vw;
+        padding: 1.465vw 2.344vw 4.297vw 2.344vw;
+        p {
+          font-size: 1.563vw;
+          line-height: 2.344vw;
+          a {
+            word-wrap: break-word;
+          }
+          br {
+            display: none;
+          }
+        }
+      }
       .main-title {
         top: auto;
         left: 0;
-        font-size: 3.32vw;
-        line-height: 4.297vw;
+        font-size: 4.297vw;
+        line-height: 5.273vw;
         width: 64.941vw;
-        bottom: 29.5vh;
+        bottom: 18.5vh;
       }
       .main-subtitle {
-        bottom: 17.5vh;
+        bottom: 10vh;
         top: auto;
-        width: 40.527vw;
-        left: 6.543vw;
+        width: 100%;
+        left: 0;
         font-size: 2.539vw;
         line-height: 3.516vw;
+        br {
+          display: none;
+        }
         a {
           border-radius: 0.661vw;
           padding: 0 0.488vw;
@@ -127,14 +146,18 @@
       .populacion-container {
         right: 0;
         top: auto;
-        bottom: 61vh;
+        top: 5.078vw;
+
         .main-populacion {
-          font-size: 5.078vw;
-          line-height: 6.055vw;
+          font-weight: 500;
+          font-size: 4.688vw;
+          line-height: 5.664vw;
           gap: 1.465vw;
           span {
-            font-size: 1.953vw;
-            line-height: 2.93vw;
+            font-weight: 500;
+            font-size: 1.563vw;
+            line-height: 2.344vw;
+            letter-spacing: -0.02em;
             border-radius: 0.781vw;
             width: auto;
             padding: 0 1.27vw;
@@ -143,15 +166,20 @@
         }
         strong {
           margin: 2.051vw 0 0 0;
-          font-size: 1.953vw;
-          line-height: 2.93vw;
-          width: 32.227vw;
+          font-weight: 400;
+          font-size: 1.563vw;
+          line-height: 2.344vw;
+          letter-spacing: -0.02em;
+          width: 34.668vw;
+          br {
+            display: none;
+          }
         }
         .main-button {
           position: absolute;
           right: 0;
           top: auto;
-          bottom: -49vh;
+          bottom: -31vh;
           margin: 0;
           width: 17.578vw;
           height: 17.578vw;
@@ -173,6 +201,21 @@
     }
   }
   .beginning {
+    height: auto;
+    .beginning-wrapper {
+      position: relative;
+      .begining-blur {
+        display: block;
+        width: 100%;
+        height: auto;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: 1;
+        transform: rotate(180deg);
+      }
+    }
+
     .bubbles1 {
       width: 4.785vw;
     }
@@ -222,30 +265,38 @@
         }
       }
       .beginning__right-block {
+        position: relative;
+        margin: 5.078vw 0 0 0;
+
         h2 {
+          position: static;
+          padding: 0 8.398vw 0 0;
           font-size: 4.688vw;
           line-height: 6.641vw;
           gap: 1.465vw;
           transform: translateY(-1.758vw);
 
           span {
+            position: absolute;
+            right: 0;
+            top: -1.27vw;
             margin: 1.758vw 0 0 0;
             padding: 0 1.27vw;
-            font-size: 1.953vw;
-            line-height: 2.93vw;
+            font-size: 1.563vw;
+            line-height: 2.344vw;
             border-radius: 0.781vw;
             width: auto;
             height: 3.906vw;
           }
         }
         strong {
-          top: 76%;
-          font-size: 2.344vw;
-          line-height: 3.32vw;
-          width: 44.238vw;
+          top: 44%;
+          font-size: 1.758vw;
+          line-height: 2.734vw;
+          width: auto;
           letter-spacing: 0.025em;
           span {
-            margin: 0.782vw 0 0 0;
+            margin: 2.782vw 0 0 0;
           }
         }
       }
@@ -331,15 +382,15 @@
           line-height: 2.93vw;
         }
         strong {
-          margin: 0.488vw 0 0 0;
-          font-size: 2.148vw;
-          line-height: 3.223vw;
+          margin: 0.88vw 0 0 0;
+          font-size: 1.758vw;
+          line-height: 2.148vw;
           letter-spacing: -0.03em;
         }
         p {
-          margin: 1.563vw 0 0 0;
-          font-size: 1.758vw;
-          line-height: 2.734vw;
+          margin: 2.563vw 0 0 0;
+          font-size: 1.563vw;
+          line-height: 2.344vw;
           width: 28.125vw;
         }
         .social {
@@ -365,33 +416,67 @@
       background-size: 5.273vw auto;
     }
   }
+  .fade-wrapper {
+    margin-top: 0;
+  }
 
-  #mintwaterway{
-    height: 6000px;
+  #mintwaterway {
+    height: auto;
+    width: 100%;
+    #mint-waterway-wrap {
+      position: static;
+      height: auto;
+    }
+  }
+
+  .mint-test {
+    flex-direction: column;
+    width: auto;
   }
   #mint {
     padding: 0;
     img.bg {
-      top: -13.75vw;
-      left: -2.25vw;
-      width: 88vw;
+      top: 9.25vw;
+      left: 18.75vw;
+      width: 66vw;
     }
     .container {
       width: 92vw;
+      .btn {
+        width: 17.578vw;
+        height: 5.859vw;
+        font-size: 1.563vw;
+        line-height: 1.758vw;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        border-radius: 0.781vw;
+        &::before,
+        &::after {
+          width: 2.979vw;
+        }
+      }
     }
     .main-title {
       font-size: 4.688vw;
       line-height: calc(68 / 48);
-      margin: 0 0 3.906vw 0;
+      margin: 13.184vw 0 3.809vw 0;
+    }
+    .main-text__container {
+      width: 36.719vw;
+      gap: 2.45vw;
+      margin: 0 0 4.688vw 0;
     }
     .main-text {
-      font-size: 2.344vw;
-      line-height: calc(34 / 24);
-      margin: 0 0 5.859vw 0;
+      font-size: 1.563vw;
+      line-height: 2.344vw;
+      br {
+        display: none;
+      }
     }
     .anime-circle {
-      top: -1.953vw;
-      left: 36.5vw;
+      top: 11.047vw;
+      left: 43.5vw;
       width: 67vw;
       .wrapper-circle {
         .character {
@@ -401,12 +486,33 @@
     }
   }
   #waterway {
+    height: 100vh;
+    position: relative;
+    width: 100%;
+    .mintwaterway-blur {
+      display: block;
+      width: 100%;
+      height: 33.887vw;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 1;
+    }
+    #waterway-bg {
+      z-index: 0;
+    }
+    #waterway-blur {
+      opacity: 1;
+    }
     &.first {
       #waterway-bg {
         width: 426.646vw;
         left: 0;
         top: -25.969vw;
         min-height: 105%;
+      }
+      .waterway-buble {
+        transform: none;
       }
     }
     &.second {
@@ -415,12 +521,18 @@
         top: 0;
         left: -107.479vw;
       }
+      .waterway-buble {
+        transform: none;
+      }
     }
     &.third {
       #waterway-bg {
         width: 360vw;
         top: 0;
         left: -124vw;
+      }
+      .waterway-buble {
+        transform: none;
       }
     }
     &.four {
@@ -430,10 +542,13 @@
         left: -220.958vw;
         min-height: 116%;
       }
+      .waterway-buble {
+        transform: none;
+      }
     }
     .waterway-tabs {
       width: 34vw;
-      gap: 2.4vw;
+      gap: 2.54vw;
       a {
         font-size: 2.344vw;
         &.active {
@@ -442,11 +557,11 @@
       }
     }
     .waterway-texts {
-      width: 34vw;
+      width: 44.141vw;
       .waterway-title {
-        font-size: 4.102vw;
-        line-height: calc(52 / 42);
-        margin: 0 0 0.977vw 0;
+        font-size: 3.418vw;
+        line-height: 4.395vw;
+        margin: 0 0 3.906vw 0;
       }
       p {
         font-size: 2.344vw;
@@ -454,15 +569,14 @@
         margin-top: 0.977vw;
       }
       ul {
+        gap: 2.354vw;
         li {
-          font-size: 1.953vw;
-          line-height: calc(30 / 20);
-          margin-top: 0.977vw;
-          padding: 0 0 0 2.8vw;
+          font-size: 1.563vw;
+          line-height: 2.344vw;
+          gap: 0.977vw;
           &::before {
-            width: 0.391vw;
-            height: 0.391vw;
-            top: 1.465vw;
+            font-size: 0.977vw;
+            line-height: 1.953vw;
           }
         }
       }
@@ -472,20 +586,39 @@
       }
     }
     .waterway-buble {
-      top: 40vw;
-      left: 17.09vw;
+      width: 28.125vw;
+      height: 28.125vw;
+      top: 53vh;
+      left: 20.09vw;
+      .buble-container {
+        .buble {
+          width: 100%;
+        }
+        .axolots {
+          width: 19.531vw;
+          &.active {
+            opacity: 1;
+          }
+        }
+      }
     }
     &.first {
       .waterway-buble {
-        top: 40vw;
+        top: 53vh;
         left: 17.09vw;
       }
     }
   }
   .waterway-maintitle {
-    font-size: 1.953vw;
-    padding: 0.488vw 1.172vw;
-    margin: 6.836vw 0 0.586vw 0;
+    font-size: 1.563vw;
+    line-height: 2.344vw;
+    padding: 0 1.563vw;
+    margin: 3.418vw 0 0 0;
+    width: auto;
+    height: 3.516vw;
+    border-radius: 0.781vw;
+    display: flex;
+    align-items: center;
   }
 
   footer {
@@ -494,25 +627,30 @@
       left: 23vw;
       top: -4vw;
     }
+
     .faq {
-      height: 84.766vw;
+      height: auto;
+      padding: 7.292vw 0 13.672vw 0;
       .main-title {
+        text-align: start;
         font-size: 4.688vw;
-        line-height: calc(68 / 48);
+        line-height: 6.641vw;
       }
     }
   }
-
+  .accordion-wrap {
+    flex-direction: column;
+  }
   .accordion-item {
-    width: 44.141vw;
+    width: 100%;
     &.show {
       max-height: 34.18vw !important;
     }
   }
 
   .accordion-title {
-    font-size: 2.148vw;
-    line-height: calc(32 / 22);
+    font-size: 1.758vw;
+    line-height: 2.734vw;
     padding: 1.66vw 1.563vw 1.66vw 3.125vw;
     &::before {
       width: 0.195vw;
@@ -525,21 +663,22 @@
   }
   .accordion-content {
     font-size: 1.758vw;
-    line-height: calc(28 / 18);
+    line-height: 2.734vw;
   }
 
   .footer {
     padding: 0 0 3.906vw 0;
     .f-main-title {
-      font-size: 6.641vw;
+      font-size: 4.688vw;
+      line-height: 6.641vw;
     }
     .join-bot {
       > span {
-        font-size: 9.18vw;
-        line-height: calc(139 / 94);
+        font-size: 8.984vw;
+        line-height: 10.84vw;
       }
       > img {
-        width: 30.762vw;
+        width: 29.297vw;
         margin: 0 0 0 13.5vw;
       }
     }
@@ -554,18 +693,20 @@
         }
       }
     }
-    .terms {
-      gap: 3.906vw;
-      margin: 0 0 2.734vw 0;
-      a {
-        font-size: 1.367vw;
-        line-height: calc(20 / 14);
+    .footer__block-wrapper {
+      .terms {
+        gap: 3.906vw;
+        margin: 0 0 2.734vw 0;
+        a {
+          font-size: 1.172vw;
+          line-height: 1.465vw;
+        }
       }
-    }
-    .powered {
-      a {
-        img {
-          width: 12.695vw;
+      .powered {
+        a {
+          img {
+            width: 16.992vw;
+          }
         }
       }
     }
