--- a/css/768.scss
+++ b/css/768.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width:860px) {
+@media only screen and (max-width: 860px) {
   @keyframes water1024 {
     0% {
       transform: translateX(0);
@@ -19,6 +19,17 @@
     }
   }
 
+  @keyframes begining-arrow768 {
+    0% {
+      transform: translateY(0) rotate(-45deg);
+    }
+    50% {
+      transform: translateY(-120%) rotate(-45deg);
+    }
+    100% {
+      transform: translateY(0) rotate(-45deg);
+    }
+  }
 
   .container {
     width: 89.583vw;
@@ -55,7 +66,6 @@
       animation: 15s water1024 linear infinite;
     }
     .water-blur1 {
-
       height: 52.083vw;
     }
     .header {
@@ -90,45 +100,54 @@
     .main__container {
       height: 100%;
       .main-title {
-        font-size: 4.427vw;
-        line-height: 5.729vw;
-        width: 86.588vw;
-        bottom: 34.5vh;
+        font-size: 44px;
+        line-height: 54px;
+        width: auto;
+        bottom: 31.5vh;
       }
       .main-subtitle {
-        bottom: 18vh;
-        width: 39.063vw;
-        left: 8.724vw;
-        font-size: 3.385vw;
-        line-height: 4.688vw;
+        bottom: 21vh;
+        width: 100%;
+        left: 0;
+        font-size: 26px;
+        line-height: 36px;
         a {
           border-radius: 0.881vw;
           padding: 0 0.651vw;
           height: 3.907vw;
         }
       }
+      .main-inbox {
+        padding: 15px 24px 44px 24px;
+        width: 402px;
+        bottom: 57vw;
+        p {
+          font-size: 16px;
+          line-height: 24px;
+        }
+      }
       .populacion-container {
-        bottom: 61vh;
+        top: 10.5vw;
         .main-populacion {
-          font-size: 6.771vw;
-          line-height: 8.073vw;
+          font-size: 42px;
+          line-height: 52px;
           gap: 1.953vw;
           span {
-            font-size: 2.604vw;
-            line-height: 3.907vw;
+            font-size: 16px;
+            line-height: 24px;
             border-radius: 1.041vw;
-            padding: 0 1.693vw;
-            height: 5.208vw;
+            padding: 0 16px;
+            height: 36px;
           }
         }
         strong {
-          margin: 2.735vw 0 0 0;
-          font-size: 2.604vw;
-          line-height: 3.907vw;
-          width: 42.969vw;
+          margin: 17px 0 0 0;
+          font-size: 16px;
+          line-height: 24px;
+          width: 324px;
         }
         .main-button {
-          bottom: -47.5vh;
+          bottom: -34.5vh;
           margin: 0;
           width: 23.437vw;
           height: 23.437vw;
@@ -149,8 +168,42 @@
     }
   }
   .beginning {
+    .beginning-wrapper {
+      .begining-blur {
+        z-index: 6;
+      }
+    }
+    .beginning-container {
+      position: relative;
+      // &::before {
+      //   content: '';
+      //   position: absolute;
+      //   right: 4vw;
+      //   left: auto;
+      //   top: auto;
+      //   bottom: 10.133vw;
+      //   height: 1.041vw;
+      //   width: 1.041vw;
+      //   border-left: 0.26vw solid #ffffff;
+      //   border-bottom: 0.26vw solid #ffffff;
+      //   transform: rotate(135deg);
+      // }
+      // &::after {
+      //   content: '';
+      //   position: absolute;
+      //   right: 0;
+      //   left: auto;
+      //   top: 0;
+      //   bottom: auto;
+      //   height: 1.041vw;
+      //   width: 1.041vw;
+      //   border-left: 0.26vw solid #ffffff;
+      //   border-bottom: 0.26vw solid #ffffff;
+      //   transform: rotate(135deg);
+      // }
+    }
     .water-blur {
-      top: -4%;
+      top: -13%;
     }
     .bubbles1 {
       width: 6.38vw;
@@ -166,20 +219,47 @@
     }
     .beginning__container {
       transform: translateY(-24%);
+      flex-direction: column-reverse;
+      position: static;
+      align-items: center;
+      &::before {
+        content: "";
+        position: absolute;
+        right: auto;
+        left: 148px;
+        top: 240px;
+        bottom: auto;
+        height: 1.041vw;
+        width: 1.041vw;
+        border-left: 0.26vw solid #ffffff;
+        border-bottom: 0.26vw solid #ffffff;
+        transform: translateY(0) rotate(-45deg);
+        animation: 1.5s begining-arrow768 linear infinite;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        right: 150px;
+        left: auto;
+        top: 240px;
+        bottom: auto;
+        height: 1.041vw;
+        width: 1.041vw;
+        border-left: 0.26vw solid #ffffff;
+        border-bottom: 0.26vw solid #ffffff;
+        transform: translateY(0) rotate(-45deg);
+        animation: 1.5s begining-arrow768 linear infinite;
+      }
+
       .beginning__slider {
         width: 57.031vw;
         height: 57.031vw;
+        transform: rotate(180deg);
         &::before {
-          height: 1.041vw;
-          width: 1.041vw;
-          border-left: 0.26vw solid #ffffff;
-          border-bottom: 0.26vw solid #ffffff;
+          display: none;
         }
         &::after {
-          height: 1.041vw;
-          width: 1.041vw;
-          border-left: 0.26vw solid #ffffff;
-          border-bottom: 0.26vw solid #ffffff;
+          display: none;
         }
         .circl-background {
           width: 57.031vw;
@@ -191,47 +271,68 @@
         }
         .gif {
           width: 35.937vw;
+          transform: translate(-50%, -50%) rotate(180deg);
         }
         .circl {
           width: 11.328vw;
           height: 11.328vw;
           font-size: 2.051vw;
           line-height: 2.995vw;
+          transform: rotate(180deg);
+          &.top {
+            top: 65.5%;
+            left: 85%;
+          }
+          &.active {
+            top: -9.5%;
+            left: 40.5%;
+          }
+          &.left {
+            top: 65.5%;
+            left: -4%;
+          }
         }
       }
       .beginning__right-block {
-        position: absolute;
+        position: static;
         right: 4.167vw;
         top: 0.651vw;
 
         h2 {
-          position: relative;
+          position: static;
+          justify-content: space-between;
+          top: 0;
+          bottom: auto;
           font-size: 6.251vw;
           line-height: 8.855vw;
           gap: 1.953vw;
-
+          padding: 0;
+          width: 688px;
           span {
-            position: absolute;
+            position: static;
             right: -4.167vw;
             top: 0;
-            margin: 2.344vw 0 0 0;
-            padding: 0 1.693vw;
-            font-size: 2.604vw;
-            line-height: 3.907vw;
+            margin: 5px 0 0 0;
+            padding: 0 17px;
+            font-size: 16px;
+            line-height: 24px;
             border-radius: 1.041vw;
             width: auto;
             height: 5.208vw;
           }
         }
         strong {
-          top: 194%;
-          margin: 0 0 0 4.948vw;
-          font-size: 3.125vw;
-          line-height: 4.427vw;
-          width: 37.37vw;
-          letter-spacing: 0.025em;
+          top: 670px;
+          left: 0;
+          margin: 0;
+          font-size: 18px;
+          line-height: 28px;
+          font-weight: 400;
+
+          width: 100%;
+          letter-spacing: -0.02em;
           span {
-            margin: 1.043vw 0 0 0;
+            margin: 27px 0 0 0;
           }
         }
       }
@@ -357,32 +458,30 @@
     }
   }
 
-  .beginning {
-    height: 300vh;
-  }
-  .fade-wrapper {
-    margin-top: -220vh;
-  }
-
-  #mintwaterway {
-    height: 7000px;
-  }
-
   #mint {
     .container {
-      margin-top: 5.5vw;
       width: 90.5vw;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      .btn {
+        margin: 20px 0 0 auto;
+      }
     }
     .main-title {
       font-size: 6.25vw;
-      line-height: calc(68/48);
+      line-height: calc(68 / 48);
       margin: 0 0 5.208vw 0;
     }
     .main-text {
-      font-size: 3.125vw;
-      line-height: calc(34/24);
+      font-size: 16px;
+      line-height: 24px;
       width: 100%;
-      margin: 0 0 7.813vw 0;
+      margin: 0 0 0 0;
+    }
+    .main-text__container {
+      margin: 215px 0 0 auto;
+      width: 323px;
     }
     .anime-circle {
       width: 97vw;
@@ -585,5 +684,4 @@
       }
     }
   }
-
 }
